INCLUDES = -I@top_srcdir@/src/swapfile -I@top_srcdir@/src/include \
	-I@top_srcdir@/src/glmid -I@top_srcdir@/src/hash \
	$(GLAME_GUI_INCLUDEDIR)

if HAVE_GNOME
#noinst_LTLIBRARIES = libgtkwaveform2.la
endif


#libgtkwaveform2_la_SOURCES = \
#	grange.c grange.h \
#	gwave.c gwave.h \
#	gwavecache.c gwavecache.h \
#	gdkwavedraw.c gdkwavedraw.h \
#	gtkwaveview.c gtkwaveview.h \
#	gtkwavewidget.c gtkwavewidget.h \
#	gsimplewavecache.c gsimplewavecache.h
